# loop-llm

./: .cursorrules  .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agent/: system.md
.cursor/: mcp.json
.cursor/rules/: PLAN.md  loopllm.mdc
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: adaptive_vs_fixed.py
benchmarks/results/: adaptive_vs_fixed.md
docs/demo/: agent_loop_demo.md
docs/launch/: CHECKLIST.md  reddit.md  show-hn.md  twitter-thread.md
examples/: agent_loop.py  basic_loop.py  bayesian_exit.py  dag_virtual_agents.py  demo_cdv_mcp.py  elicitation_demo.py  episodic_recall_loop.py  langgraph_stopper.py  task_orchestration.py
scripts/: audit_cdv_loop.py  generate_cdv_gif.py  publish_pypi.sh
src/loopllm/: __init__.py  __main__.py  adapters.py  adaptive_exit.py  agent_loop.py  cli.py  dag_scheduler.py  elicitation.py  engine.py  episodes.py  evaluator_factory.py  evaluators.py  guards.py  local_loop.py  mcp_server.py  plan_registry.py  priors.py  provider.py  serve.py  step_scorer.py  store.py  tasks.py
src/loopllm/providers/: __init__.py  agent.py  mock.py  ollama.py  openrouter.py
tests/: conftest.py  test_adapters.py  test_agent_loop.py  test_benchmark.py  test_dag_scheduler.py  test_elicitation.py  test_engine.py  test_episodes.py  test_evaluators.py  test_guards.py  test_integration.py  test_local_loop.py  test_mcp_episodic.py  test_plan_registry.py  test_priors.py  test_prompt_engineering.py  test_step_scorer.py  test_store.py  test_tasks.py
vscode-loopllm/: package-lock.json  package.json
vscode-loopllm/src/: dashboardProvider.ts  dataProvider.ts  extension.ts  loopMonitorProvider.ts  promptLabProvider.ts  sql.js.d.ts  statusBar.ts  statusWatcher.ts
