[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopllm"
version = "0.1.0"
description = "Iterative refinement engine for LLM applications with Bayesian adaptive exit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "structlog>=24.0.0",
]

[project.optional-dependencies]
openrouter = [
    "httpx>=0.27.0",
]
ollama = [
    "httpx>=0.27.0",
]
all = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loopllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_explicit = false
