[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopllm"
version = "0.8.0"
description = "MCP server that observes every prompt, scores quality in real time, and closes the loop with iterative refinement. Built on FastMCP, SQLite, and Bayesian priors — no extra LLM required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "azank1" }]
keywords = [
    "mcp",
    "llm",
    "agent",
    "agent-loop",
    "bayesian",
    "prompt-engineering",
    "thompson-sampling",
    "cursor",
    "vscode",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "structlog>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/azank1/loop-llm"
Repository = "https://github.com/azank1/loop-llm"
Changelog = "https://github.com/azank1/loop-llm/blob/main/CHANGELOG.md"
Issues = "https://github.com/azank1/loop-llm/issues"

[project.optional-dependencies]
openrouter = [
    "httpx>=0.27.0",
]
ollama = [
    "httpx>=0.27.0",
]
mcp = [
    "mcp>=1.0.0",
]
serve = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
]
all = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mcp>=1.0.0",
]

[project.scripts]
loopllm = "loopllm.cli:main"
loopllm-mcp = "loopllm.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loopllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require live LLM API access (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "loopllm.serve"
ignore_errors = true
